--- a/css/console.css
+++ b/css/console.css
@@ -1,7 +1,10 @@
 .console {
 	width: 100%;
 	max-width: 100%;
-	height: 100%;
+  height: 100%;
+  
+  overflow-y: scroll;
+  overflow-x: hidden;
 
 	padding: 10px;
 	box-sizing: border-box;
@@ -81,4 +84,22 @@
 .console a {
   text-decoration: underline;
   font-weight: bold;
+  color: #ff981d;
+}
+
+.console h1 {
+  font-size: 16px;
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.console h2 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.console h3 {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: normal;
 }
