--- a/resources/css/console.css
+++ b/resources/css/console.css
@@ -138,3 +138,15 @@
 .color-complement-2 { color: #26C8C8 }
 .color-complement-3 { color: #007E7E }
 .color-complement-4 { color: #004F4F }
+
+.color-secondary-1-0 { color: #FFAA00 }	/* Main Secondary color (1) */
+.color-secondary-1-1 { color: #FFDC95 }
+.color-secondary-1-2 { color: #FFBA31 }
+.color-secondary-1-3 { color: #D18C00 }
+.color-secondary-1-4 { color: #835700 }
+
+.color-secondary-2-0 { color: #FF0000 }	/* Main Secondary color (2) */
+.color-secondary-2-1 { color: #FF9595 }
+.color-secondary-2-2 { color: #FF3131 }
+.color-secondary-2-3 { color: #D10000 }
+.color-secondary-2-4 { color: #830000 }
