--- a/resources/css/console.css
+++ b/resources/css/console.css
@@ -66,13 +66,11 @@
 }
 
 .console a {
-  text-decoration: none;
   font-weight: bold;
   color: #00C7C7;
 }
 
 .console a.special {
-  text-decoration: underline;
   color: #7AD2D2;
 }
 
@@ -126,6 +124,7 @@
   bottom: 0;
   background: black;
   padding: .5ex 0;
+  width: 100%;
 }
 
 .extra-padding-bottom {
