--- a/resources/css/console.css
+++ b/resources/css/console.css
@@ -169,3 +169,14 @@
 /* Preload critical images */
 #preload-01 { background: url(/resources/assets/masthead1.png) no-repeat -9999px -9999px; }
 #preload-02 { background: url(/resources/assets/masthead2.png) no-repeat -9999px -9999px; }
+
+/* Easter eggs! */
+.disco-ball-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.disco-ball {
+  color: cyan;
+}
