--- a/resources/css/console.css
+++ b/resources/css/console.css
@@ -174,9 +174,10 @@
 .disco-ball-container {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
+  text-align: center;
 }
 
 .disco-ball {
-  color: cyan;
+  display: inline-block;
 }
