--- a/resources/css/console.css
+++ b/resources/css/console.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Code New Roman'; /*a name to be used later*/
+    src: url('/resources/assets/Code New Roman.otf'); /*URL to font*/
+}
+
 .console-container {
   height: 100%;
   overflow-y: scroll;
@@ -13,7 +18,7 @@
 	padding: 0.5ex;
 	box-sizing: border-box;
 
-	font-family: Consolas, monospace;
+	font-family: 'Code New Roman', Consolas, monospace;
   color:#FFFFFF;
 
   word-break: break-word;
