--- a/resources/css/console.css
+++ b/resources/css/console.css
@@ -18,7 +18,7 @@
 	padding: 0.5ex;
 	box-sizing: border-box;
 
-	font-family: 'Code New Roman', Consolas, monospace;
+	font-family: Consolas, monospace;
   color:#FFFFFF;
 
   word-break: break-word;
