--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,4 +1,8 @@
-.contentContainer {
+.pageContainer {
   width: 80%;
   margin: 0 auto;
+}
+
+.contentContainer {
+  min-height: calc(100vh - 160px);
 }
