--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,11 @@
+
 .header {
-  margin-top: 50px;
+  margin-top: 20px;
 }
 .header h1 {
+  font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
+  font-weight: 100;
+  font-size: 60px;
+  margin-bottom: 20px;
 }
