--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,13 +8,13 @@ body {
 h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
 }
-
+/* 
 h2 {
   font-weight: 300;
-}
+} */
 
 h3 {
-  font-weight: 400;
+  font-weight: 600;
 }
 
 a {
