--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,11 +10,11 @@
 .aboutContainer {
   display: table;
   width: 700px;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 .aboutContainer img {
-  height: 300px;
+  height: 286px;
   display: table-cell;
   margin-right: 20px;
 }
@@ -22,7 +22,11 @@
 .aboutText {
   display: table-cell;
   width: auto;
-  vertical-align: middle;
+  vertical-align: top;
+}
+
+.aboutText h2 {
+  margin-top: 7px;
 }
 
 .aboutText p {
