--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,13 +7,7 @@ body {
 
 h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
-}
-/* 
-h2 {
-  font-weight: 300;
-} */
-
-h3 {
+  text-transform: uppercase;
   font-weight: 600;
 }
 
