changed to border instead of background for better dark mode rendering

--- a/src/components/hline.module.css
+++ b/src/components/hline.module.css
@@ -1,5 +1,6 @@
 .hline {
   width: 80%;
-  height: 0.5px;
-  background-color: black;
+  height: 0;
+  border-top-style: solid;
+  border-top-width: 0.5px;
 }
